@@ -7,7 +7,7 @@ compute advanced nodeset operations
 -----------------------------------
 
 :Author: Stephane Thiell <sthiell@stanford.edu>
-:Date:   2015-07-10
+:Date:   2015-08-29
 :Copyright: CeCILL-C V1
 :Version: 1.7
 :Manual section: 1
@@ -72,6 +72,7 @@ OPTIONS
                         return sliced off result; examples of SLICE_RANGESET are "0" for simple index selection, or "1-9/2,16" for complex rangeset selection
     --split=MAXSPLIT    split result into a number of subsets
     --contiguous        split result into contiguous subsets (ie. for nodeset, subsets will contain nodes with same pattern name and a contiguous range of indexes, like foobar[1-100]; for rangeset, subsets with consists in contiguous index ranges)"""
+    --axis=RANGESET     fold along these axis only (axis are indexed from 0 to n for nD nodeset and can be specified here using rangeset syntax, eg. '0', '0-1', '0,2')
 
 
 For a short explanation of these options, see ``-h, --help``.
@@ -163,12 +164,17 @@ Folding nodesets
   | node[0-7,32-163]
 
   :$ echo node3 node6 node1 node2 node7 node5 | nodeset -f:
-
+  
   | node[1-3,5-7]
 
   :$ nodeset -f dc1n2 dc2n2 dc1n1 dc2n1:
   
   | dc[1-2]n[1-2]
+
+  :$ nodeset --axis=0 -f dc1n2 dc2n2 dc1n1 dc2n1:
+  
+  | dc[1-2]n1,dc[1-2]n2
+
 
 
 Expanding nodesets
